# BitFiddling

./: BitPattern.cpp  BitPattern.h  BitSetIterator.h  Board.h  CMakeLists.txt  Engine  Node.cpp  Node.h  NodeAllocator.h  Position.cpp  Position.h  Prng.cpp  Prng.h  Search.h  Union.cpp  Union.h  main.cpp  test  test.cpp  testing  testing.cpp  types.h
.cmake/api/v1/reply/: cache-v2-00be12609adc82b36490.json  cmakeFiles-v1-ecbee1639e51a45302c4.json  codemodel-v2-2c8c208e034a8f63d338.json  codemodel-v2-c728785739300b751fa1.json  codemodel-v2-d0f63dc4fce4b568861c.json  codemodel-v2-e9e4236cddcb469823c2.json  index-2022-11-27T00-21-39-0842.json  index-2022-12-04T09-50-30-0126.json  index-2022-12-11T16-29-50-0956.json  index-2022-12-13T12-35-49-0124.json  index-2022-12-14T21-22-05-0813.json  target-Engine-1b0a5d4396bb33ce7aa2.json  target-Engine-Release-2308a3e31232169ba65b.json  target-Engine-Release-9ea53c8250b734d271bf.json  target-Engine-cb2a58500f9b2801fdf9.json  target-testing-9421a9f244824e4e6d67.json  target-testing-Release-150b3bf954fae0934fce.json  target-testing-Release-9a42360be8f618eae140.json  target-testing-f4c5c26ffe4d943244ef.json
Util/: GameGen.cpp  GameGen.h  Interface.cpp  Interface.h  ThreadPool.h  Util.cpp  Util.h
