cmake_minimum_required(VERSION 3.12)
project(reading)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_FLAGS "-Ofast -march=native -flto -ffat-lto-objects -fuse-linker-plugin")
add_executable(testing Union.h Prng.cpp Prng.h BitPattern.h Position.h main.cpp Board.h Node.h types.h Search.h Util/GameGen.cpp Util/GameGen.h NodeAllocator.h)